--- a/app/index.html
+++ b/app/index.html
@@ -73,291 +73,252 @@
       </div>
     </nav>
 
+    <h1 class="headline">Строительство домов из газобетона <br> в Санкт-Петербурге</h1>
 
   </header>
 
+  <!-- //*Header*// -->
 
+  <section class="profession">
+    <div class="container profession-container">
+      <div class="profession-text">
+        <h3 class="">«Мой дом – моя крепость» - для нас это не просто фигура речи, это наша основа!</h3>
+        <p>
+          Долговечность конструкций – до 200 лет!
+          Газобетонный блок – разновидность ячеистого бетона, который получил популярность благодаря
+          пористой структуре, наделяющей изделия особыми качествами:
+          высокая экологичность материала и пожароустойчивость;
+          низкий коэффициент теплопроводности при условии сохранения высоких показателей прочности;
+          низкий вес способен снизить нагрузку на фундамент строения;
+          долговечность и высокие эксплуатационные характеристики;
+          большой выбор вариантов отделки фасада и внутренней части здания;
+          простая технология укладки блока;
+          цена/качество.
+          <br>
+          <br>
+          Говоря о стоимости дома, не стоит забывать и о его ликвидности на вторичном рынке.
+          Спустя годы продать «каркаскник», да ещё и на винтовых сваях, будет на порядок сложнее, чем каменный газобетонный дом.
 
-  <!-- <h1 class="headline">Строительство домов из газобетона <br> в Санкт-Петербурге</h1>
+        </p>
+      </div>
 
-  <div class="advantage">
-  <div class="advantage-item">
-  <i class="fas fa-home"></i>
-  <p>Более 13 лет опыта<br> работы в сфере<br> строительства и ремонтов</p>
-</div>
+      <div class="advantage">
+        <div class="advantage-item">
+          <i class="fas fa-home"></i>
+          <p>Более 17 лет опыта в сфере строительства и монолитных работ</p>
+        </div>
 
-<div class="advantage-item">
-<i class="fas fa-tools"></i>
-<p>Профессиональное<br> оборудование <br>и инструмент</p>
-</div>
+        <div class="advantage-item">
+          <i class="fas fa-tools"></i>
+          <p>Квалифицированные кадры и профессиональное оборудование</p>
+        </div>
 
-<div class="advantage-item">
-<i class="fas fa-shield-alt"></i>
-<p>Гарантия 2 года<br> на все<br> производимые работы</p>
-</div>
+        <div class="advantage-item">
+          <i class="fas fa-shield-alt"></i>
+          <p>Гарантийные обязательства на все виды работ</p>
+        </div>
 
-<div class="advantage-item">
-<i class="fas fa-ruble-sign"></i>
-<p>Фиксированная<br> стоимость<br> работ</p>
-</div>
-</div> -->
+        <div class="advantage-item">
+          <i class="fas fa-ruble-sign"></i>
+          <p>Фиксированная<br> стоимость<br> работ</p>
+        </div>
+      </div>
+    </div>
+    <!-- <p>Проектируем дома от 200р/м2 + подробная смета на строительство дома в подарок.</p> -->
 
+  </section>
 
-<!-- //*Header*// -->
+  <section class="announce">
+    <h2>Прописываем в договоре конкретные <br>сроки и фиксированную стоимость. <br>Иначе выплатим Вам штраф!</h2>
+  </section>
 
-<section class="profession">
-  <div class="container profession-container">
-    <div class="profession-text">
-      <h3 class="">«Мой дом – моя крепость» - для нас это не просто фигура речи, это наша основа!</h3>
-      <h3 class=""></h3>
+  <section id="sectionProjects" class="goods">
+    <div class="container">
+      <h2 class="sectionTitle">Проекты</h2>
+      <div class="projects">
+
+        <div class="project" data-name="EX_90">
+          <div class="project-image">
+            <img src="./images/goods/EX_90.jpg" alt="">
+          </div>
+          <div class="project-title">
+            <h3>EX 90</h3>
+          </div>
+          <span class="project-price hidden">5 000 000</span>
+          <div class="project-info hidden">
+            <p><span class="bold">Внутренняя площадь:</span>89.8 м<sup>2</sup></p>
+            <p><span class="bold">Внешняя площадь:</span>89.8 м<sup>2</sup></p>
+            <p><span class="bold">Этажность:</span>2 этажа</p>
+          </div>
+        </div>
+
+        <div class="project" data-name="EX_79">
+          <div class="project-image">
+            <img src="./images/goods/EX_79.jpg" alt="">
+          </div>
+          <div class="project-title">
+            <h3>EX 79</h3>
+          </div>
+          <span class="project-price hidden">5 000 000</span>
+          <div class="project-info hidden">
+            <p><span class="bold">Внутренняя площадь:</span>193 м<sup>2</sup></p>
+            <p><span class="bold">Внешняя площадь:</span>153 м<sup>2</sup></p>
+            <p><span class="bold">Этажность:</span>2 этажа</p>
+          </div>
+        </div>
+
+        <div class="project" data-name="EX_61">
+          <div class="project-image">
+            <img src="./images/goods/EX_61.jpg" alt="">
+          </div>
+          <div class="project-title">
+            <h3>EX 61</h3>
+          </div>
+          <span class="project-price hidden">5 000 000</span>
+          <div class="project-info hidden">
+            <p><span class="bold">Внутренняя площадь:</span>111 м<sup>2</sup></p>
+            <p><span class="bold">Внешняя площадь:</span>89 м<sup>2</sup></p>
+            <p><span class="bold">Этажность:</span>2 этажа</p>
+          </div>
+        </div>
+
+        <div class="project" data-name="EX_17">
+          <div class="project-image">
+            <img src="./images/goods/EX_17.jpg" alt="">
+          </div>
+          <div class="project-title">
+            <h3>EX 17</h3>
+          </div>
+          <span class="project-price hidden">5 000 000</span>
+          <div class="project-info hidden">
+            <p><span class="bold">Внутренняя площадь:</span>94 м<sup>2</sup></p>
+            <p><span class="bold">Внешняя площадь:</span>74 м<sup>2</sup></p>
+            <p><span class="bold">Этажность:</span>2 этажа</p>
+          </div>
+        </div>
+
+        <div class="project" data-name="EX_95">
+          <div class="project-image">
+            <img src="./images/goods/EX_95.jpg" alt="">
+          </div>
+          <div class="project-title">
+            <h3>EX 95</h3>
+          </div>
+          <span class="project-price hidden">5 000 000</span>
+          <div class="project-info hidden">
+            <p><span class="bold">Внутренняя площадь:</span>104 м<sup>2</sup></p>
+            <p><span class="bold">Внешняя площадь:</span>82 м<sup>2</sup></p>
+            <p><span class="bold">Этажность:</span>2 этажа</p>
+          </div>
+        </div>
+
+        <div class="project" data-name="EX_147">
+          <div class="project-image">
+            <img src="./images/goods/EX_147.jpg" alt="">
+          </div>
+          <div class="project-title">
+            <h3>EX 147</h3>
+          </div>
+          <span class="project-price hidden">5 000 000</span>
+          <div class="project-info hidden">
+            <p><span class="bold">Внутренняя площадь:</span>170 м<sup>2</sup></p>
+            <p><span class="bold">Внешняя площадь:</span>132 м<sup>2</sup></p>
+            <p><span class="bold">Этажность:</span>2 этажа</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <section id="sectionGallery" class="gallery">
+    <h2 class="sectionTitle">Наши работы</h2>
+    <div class="images" data-width="100%">
+      <img alt="" src="images/gallery/image1.jpg">
+      <img alt="" src="images/gallery/image2.jpg">
+      <img alt="" src="images/gallery/image3.jpg">
+    </div>
+  </section>
+
+  <section id="sectionAbout" class="about">
+    <div class="container">
+      <h2 class="sectionTitle">О Нас</h2>
       <p>
-        Долговечность конструкций – до 200 лет!
-        Газобетонный блок – разновидность ячеистого бетона, который получил популярность благодаря
-        пористой структуре, наделяющей изделия особыми качествами:
-        высокая экологичность материала и пожароустойчивость;
-        низкий коэффициент теплопроводности при условии сохранения высоких показателей прочности;
-        низкий вес способен снизить нагрузку на фундамент строения;
-        долговечность и высокие эксплуатационные характеристики;
-        большой выбор вариантов отделки фасада и внутренней части здания;
-        простая технология укладки блока;
-        цена/качество.
+        С момента основания в 2004 году и до настоящего времени компания «Solid Home» прошла путь от
+        небольшой подрядной организации до крупного многопрофильного предприятия, предоставляющего
+        широкий спектр услуг в сфере загородного малоэтажного строительства. За прошедшие 17 лет значительно расширились направления деятельности компании, сформировался коллектив квалифицированных инженеров, мастеров и менеджеров, которые хорошо знают особенности современных строительных технологий и материалов.
+        Мы занимаемся всеми видами работ по строительству домов, как комплексно, так и отдельно:
         <br>
         <br>
-        Говоря о стоимости дома, не стоит забывать и о его ликвидности на вторичном рынке.
-        Спустя годы продать «каркаскник», да ещё и на винтовых сваях, будет на порядок сложнее, чем каменный газобетонный дом.
-
+        <span class="bold">
+          заливка фундамента;
+          возведение стен и перегородок;
+          кровля;
+          электрика;
+          внутренние и внешние коммуникации;
+          отделочные работы.
+        </span>
+        <br>
+        <br>
+        Высокий уровень профессионализма каждого специалиста, максимальная ответственность при выполнении
+        любых задач, неизменное соблюдение утвержденных стандартов и достигнутых договоренностей – основные
+        принципы, которыми руководствуются все сотрудники предприятия.
+        <br>
+        <br>
+        Мы объединили в себе все качества, которыми должна обладать строительная компания:
+        <span class="bold">
+          мастерское выполнение работ;
+          разумные цены;
+          предельная внимательность к клиенту.
+        </span>
       </p>
+
     </div>
 
-    <div class="advantage">
-      <div class="advantage-item">
-        <i class="fas fa-home"></i>
-        <p>Более 17 лет опыта в сфере строительства и монолитных работ</p>
+  </section>
+
+
+
+  <section id="sectionContacts" class="contacts">
+    <div class="container">
+      <h2 class="sectionTitle">Контакты</h2>
+
+      <div class="contacts-wrapper">
+
+        <div class="contacts-links">
+
+          <div class="contacts-item contacts-phone">
+            <i class="fas fa-phone"></i>
+            <a href="tel:+79112879018" class="contacts-link callToMe">+7-911-287-90-18</a>
+          </div>
+
+          <div class="contacts-item contacts-email">
+            <i class="fas fa-envelope"></i>
+            <a href="mailto:sales@solid-home.ru" class="contacts-link">sales@solid-home.ru</a>
+          </div>
+
+          <div class="contacts-item contacts-messenger">
+            <i class="fab fa-whatsapp"></i>
+            <a href="https://wa.me/88121234567" class="contacts-link">Whatsapp</a>
+          </div>
+
+          <!-- <div class="contacts-item contacts-adress">
+          <i class="fas fa-map-marker-alt"></i>
+          <span class="contacts-link">СПб, Тестовая улица, дом 64, кор. 1</span>
+        </div> -->
       </div>
 
-      <div class="advantage-item">
-        <i class="fas fa-tools"></i>
-        <p>Квалифицированные кадры и профессиональное оборудование</p>
-      </div>
+      <div class="message">
 
-      <div class="advantage-item">
-        <i class="fas fa-shield-alt"></i>
-        <p>Гарантийные обязательства на все виды работ</p>
-      </div>
-
-      <div class="advantage-item">
-        <i class="fas fa-ruble-sign"></i>
-        <p>Фиксированная<br> стоимость<br> работ</p>
-      </div>
-    </div>
-  </div>
-  <!-- <p>Проектируем дома от 200р/м2 + подробная смета на строительство дома в подарок.</p> -->
-
-</section>
-
-<section class="announce">
-  <h2>Прописываем в договоре конкретные <br>сроки и фиксированную стоимость. <br>Иначе выплатим Вам штраф!</h2>
-</section>
-
-<section id="sectionProjects" class="goods">
-  <div class="container">
-    <h2 class="sectionTitle">Проекты</h2>
-    <div class="projects">
-
-      <div class="project" data-name="forenta">
-        <div class="project-image">
-          <img src="./images/dom.jpg" alt="">
-        </div>
-        <div class="project-title">
-          <h3>Forenta</h3>
-        </div>
-        <span class="project-price hidden">5 000 000</span>
-        <div class="project-info hidden">
-          <p><span class="bold">Внутренняя площадь:</span>75м2</p>
-          <p><span class="bold">Внешняя площадь:</span>75м<sup>2</sup></p>
-          <p><span class="bold">Этажность:</span>1 этаж</p>
-        </div>
-        <!-- <div class="project-order">
-        <button class='order-btn'>Заказать</button>
-      </div> -->
-    </div>
-
-    <div class="project">
-      <div class="project-image">
-        <img src="./images/dom.jpg" alt="">
-      </div>
-      <div class="project-title">
-        <h3>Forenta</h3>
-      </div>
-      <div class="project-info hidden">
-        <!-- <li><span class="bold">Внутренняя площадь:</span>75м2</li>
-        <li><span class="bold">Внешняя площадь:</span>75м<sup>2</sup></li>
-        <li><span class="bold">Этажность:</span>1 этаж</li> -->
-      </div>
-      <div class="project-order">
-        <!-- <button class='order-btn'>Заказать</button> -->
+        <form action="mail.php" id="message" class="message-form">
+          <input type="text" name="" value="" placeholder="Ваше Имя">
+          <input type="text" name="" value="" placeholder="Ваш e-mail">
+          <textarea name="name" rows="8" cols="80" placeholder="Введите сообщение"></textarea>
+          <button type="button" name="button">Отправить</button>
+        </form>
       </div>
     </div>
-
-    <div class="project">
-      <div class="project-image">
-        <img src="./images/dom.jpg" alt="">
-      </div>
-      <div class="project-title">
-        <h3>Forenta</h3>
-      </div>
-      <div class="project-info hidden">
-        <p><span class="bold">Внутренняя площадь:</span>75м2</p>
-        <p><span class="bold">Внешняя площадь:</span>75м<sup>2</sup></p>
-        <p><span class="bold">Этажность:</span>1 этаж</p>
-      </div>
-      <!-- <div class="project-order">
-      <button class='order-btn'>Заказать</button>
-    </div> -->
   </div>
-
-  <div class="project">
-    <div class="project-image">
-      <img src="./images/dom.jpg" alt="">
-    </div>
-    <div class="project-title">
-      <h3>Forenta</h3>
-    </div>
-    <div class="project-info hidden">
-      <li><span class="bold">Внутренняя площадь:</span>75м2</li>
-      <li><span class="bold">Внешняя площадь:</span>75м<sup>2</sup></li>
-      <li><span class="bold">Этажность:</span>1 этаж</li>
-    </div>
-    <!-- <div class="project-order">
-    <button class='order-btn'>Заказать</button>
-  </div> -->
-</div>
-
-<div class="project">
-  <div class="project-image">
-    <img src="./images/dom.jpg" alt="">
-  </div>
-  <div class="project-title">
-    <h3>Forenta</h3>
-  </div>
-  <div class="project-info hidden">
-    <li><span class="bold">Внутренняя площадь:</span>75м2</li>
-    <li><span class="bold">Внешняя площадь:</span>75м<sup>2</sup></li>
-    <li><span class="bold">Этажность:</span>1 этаж</li>
-  </div>
-  <!-- <div class="project-order">
-  <button class='order-btn'>Заказать</button>
-</div> -->
-</div>
-
-<div class="project">
-  <div class="project-image">
-    <img src="./images/dom.jpg" alt="">
-  </div>
-  <div class="project-title">
-    <h3>Forenta</h3>
-  </div>
-  <div class="project-info hidden">
-    <li><span class="bold">Внутренняя площадь:</span>75м2</li>
-    <li><span class="bold">Внешняя площадь:</span>75м<sup>2</sup></li>
-    <li><span class="bold">Этажность:</span>1 этаж</li>
-  </div>
-  <!-- <div class="project-order">
-  <button class='order-btn'>Заказать</button>
-</div> -->
-</div>
-</div>
-</div>
-</section>
-
-<section id="sectionGallery" class="gallery">
-  <h2 class="sectionTitle">Наши работы</h2>
-  <div class="images" data-width="100%">
-    <img alt="" src="images/gallery/image1.jpg">
-    <img alt="" src="images/gallery/image2.jpg">
-    <img alt="" src="images/gallery/image3.jpg">
-  </div>
-</section>
-
-<section id="sectionAbout" class="about">
-  <div class="container">
-    <h2 class="sectionTitle">О Нас</h2>
-    <p>
-      С момента основания в 2004 году и до настоящего времени компания «Solid Home» прошла путь от
-      небольшой подрядной организации до крупного многопрофильного предприятия, предоставляющего
-      широкий спектр услуг в сфере загородного малоэтажного строительства. За прошедшие 17 лет значительно расширились направления деятельности компании, сформировался коллектив квалифицированных инженеров, мастеров и менеджеров, которые хорошо знают особенности современных строительных технологий и материалов.
-      Мы занимаемся всеми видами работ по строительству домов, как комплексно, так и отдельно:
-      <br>
-      <br>
-      <span class="bold">
-        заливка фундамента;
-        возведение стен и перегородок;
-        кровля;
-        электрика;
-        внутренние и внешние коммуникации;
-        отделочные работы.
-      </span>
-      <br>
-      <br>
-      Высокий уровень профессионализма каждого специалиста, максимальная ответственность при выполнении
-      любых задач, неизменное соблюдение утвержденных стандартов и достигнутых договоренностей – основные
-      принципы, которыми руководствуются все сотрудники предприятия.
-      <br>
-      <br>
-      Мы объединили в себе все качества, которыми должна обладать строительная компания:
-      <span class="bold">
-        мастерское выполнение работ;
-        разумные цены;
-        предельная внимательность к клиенту.
-      </span>
-    </p>
-
-  </div>
-
-</section>
-
-
-
-<section id="sectionContacts" class="contacts">
-  <div class="container">
-    <h2 class="sectionTitle">Контакты</h2>
-
-    <div class="contacts-wrapper">
-
-      <div class="contacts-links">
-
-        <div class="contacts-item contacts-phone">
-          <i class="fas fa-phone"></i>
-          <a href="tel:+79112879018" class="contacts-link callToMe">+7-911-287-90-18</a>
-        </div>
-
-        <div class="contacts-item contacts-email">
-          <i class="fas fa-envelope"></i>
-          <a href="mailto:sales@solid-home.ru" class="contacts-link">sales@solid-home.ru</a>
-        </div>
-
-        <div class="contacts-item contacts-messenger">
-          <i class="fab fa-whatsapp"></i>
-          <a href="https://wa.me/88121234567" class="contacts-link">Whatsapp</a>
-        </div>
-
-        <!-- <div class="contacts-item contacts-adress">
-        <i class="fas fa-map-marker-alt"></i>
-        <span class="contacts-link">СПб, Тестовая улица, дом 64, кор. 1</span>
-      </div> -->
-    </div>
-
-    <div class="message">
-
-      <form action="mail.php" id="message" class="message-form">
-        <input type="text" name="" value="" placeholder="Ваше Имя">
-        <input type="text" name="" value="" placeholder="Ваш e-mail">
-        <textarea name="name" rows="8" cols="80" placeholder="Введите сообщение"></textarea>
-        <button type="button" name="button">Отправить</button>
-      </form>
-    </div>
-  </div>
-</div>
 
 
 </section>
